welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:4: error: value update is not a member of Int
	if((getX()=getMondeLargeur()-1) && (getY() == getMondeHauteur()-1)){true}else{false}
            ^